# ddpm-latent-dit

./: README.md  pyproject.toml  train.py
dit/: config.py
dit/data/: dataset.py
dit/model/: autoencoder.py  diffusion.py  transformer.py
dit/utils/: training.py
src/ddpm-latent-dit/: __init__.py
